Actualización versión IAIP Oaxaca
Footer con datos propios de IAIP Oaxaca
Header con el logo de IAIP Oaxaca
Breadcum nombre del IAIP Oaxaca

--- a/contratacionesabiertas/captura/public/inai-footer/dgm-footer.html
+++ b/contratacionesabiertas/captura/public/inai-footer/dgm-footer.html
@@ -1665,7 +1665,7 @@ Example:
         .main-container {
             width: 100%;
             position: absolute;
-            height: 473px;
+            height: 543px;
             left: 0;
             right: 0;
             bottom: 100;
@@ -1787,13 +1787,13 @@ Example:
                     <div class="pru col-md-4 col-lg-4" style="text-align: center; margin-top: 41px;">
                         <h5 style="color: #999999; font-weight: bold;">Síguenos:</h5>
                         </br>
-                        <a href="//facebook.com/INAImx" target="_blank">
-                            <img src="/images/FacebookF.png" alt="Facebook INAI" height="45px" class="facebooklogo">
+                        <a href="//facebook.com/IAIPOaxaca" target="_blank">
+                            <img src="/images/FacebookF.png" alt="Facebook IAIP" height="45px" class="facebooklogo">
                         </a>
-                        <a href="//twitter.com/inaimexico" target="_blank" style="margin-left: 20px;">
-                            <img src="/images/TwitterF.png" alt="Twitter INAI" height="45px" class="twitterlogo">
+                        <a href="//twitter.com/iaipoaxaca" target="_blank" style="margin-left: 20px;">
+                            <img src="/images/TwitterF.png" alt="Twitter IAIP" height="45px" class="twitterlogo">
                         </a>
-                        </br></br></br>
+                        </br></br></br></br></br>
                         <h5 style="color: #5df2d6; font-weight: bold;">#ContratacionesAbiertas</h5>
                         </br></br>
                         <h5 style="color: #999999; font-weight: bold;">Usa y mejora esta herramienta:</h5>
@@ -1806,17 +1806,21 @@ Example:
                         <h5 style="color: #999999; font-weight: bold;">Sitios de interés:</h5>
 						
                         <ul>
-                            <li><a href="http://www.plataformadetransparencia.org.mx/web/guest/inicio" target="_blank"><h6 class="sitioInt">Plataforma Nacional de Transparencia<h6></a></li>
-                            <li><a href="https://micrositios.inai.org.mx/gobiernoabierto/" target="_blank"><h6 class="sitioInt">Gobierno Abierto y Transparencia</h6></a></li>
-                            <li><a href="https://micrositios.inai.org.mx/plandai/" target="_blank"><h6 class="sitioInt">Plan Nacional de Socialización del Derecho de Acceso a la Información</h6></a></li>
+                            <li><a href="http://gobiernoabierto.iaipoaxaca.org.mx/" target="_blank"><h6 class="sitioInt">Cocreación Oaxaca<h6></a></li>
+                            <li><a href="http://stgao.org/" target="_blank"><h6 class="sitioInt">Secretariado Técnico de Gobierno Abierto del Estado de Oaxaca</h6></a></li>
+                            <li><a href="http://iaipoaxaca.org.mx/site/" target="_blank"><h6 class="sitioInt">Instituto de Acceso a la Información y Protección
+                            de Datos Personales del Estado de Oaxaca</h6></a></li>
+                            <li><a href="https://www.finanzasoaxaca.gob.mx/" target="_blank"><h6 class="sitioInt">Secretaría de Finanzas<h6></a></li>
+                            <li><a href="https://www.oaxaca.gob.mx/sctg/" target="_blank"><h6 class="sitioInt">Secretaría de la Controlaría y Transparencia Gubernamental<h6></a></li>
+                            <li><a href="https://www.osfeoaxaca.gob.mx/" target="_blank"><h6 class="sitioInt"> Órgano Superior de Fiscalización del Estado de Oaxaca<h6></a></li>
                         </ul>
-                        <br><br><br>
+                        <br>
                         <h5 style="color: #999999; font-weight: bold; margin-top:7px;">Contacto:</h5>
                         <ul>
-                            <li><h6 style="color: #999999">Instituto Nacional de Transparencia, Acceso a la Información y Protección de Datos Personales</h6></li>
-                            <li><h6 style="color: #999999">Insurgentes Sur No. 3211 Col. Insurgentes Cuicuilco, Alcaldía Coyoacán, C.P. 04530, Ciudad de México, México</h6></li>
-                            <li><h6 style="color: #999999">TELINAI 800 8354324</h6></li>
-                            <li><h6 style="color: #999999">contratacionesabiertas@inai.org.mx</h6></li>
+                            <li><h6 style="color: #999999">Instituto de Acceso a la Información Pública y Protección de Datos Personales del Estado de Oaxaca</h6></li>
+                            <li><h6 style="color: #999999">Almendros #122, Col. Reforma, Oaxaca de Juárez, Oax. C.P. 68050</h6></li>
+                            <li><h6 style="color: #999999">Llámanos: <br>(951) 515 1190 / (951) 515 2257 <br>(951) 515 2321 / 01 800 00 43247</h6></li>
+                            <li><h6 style="color: #999999">tecnologias@iaipoaxaca.org.mx</h6></li>
                         </ul>
                     </div>
                 </div>
