--- a/contratacionesabiertas/dashboard/public/inai-navbar/dgm-navbar_datos.html
+++ b/contratacionesabiertas/dashboard/public/inai-navbar/dgm-navbar_datos.html
@@ -139,8 +139,8 @@ and (max-device-width: 736px) {
 		<div>
             <div class="row topBarTop topBarTopS">
                 <div class="col-md-4 navbar-header logoINAItop">
-                    <a  title="Ir a la página de inicio del INAI" target="_blank" href="//inicio.inai.org.mx/">
-                        <img src="/contratacionesabiertas/static/images/INAI-26.png" height=46px alt="INAI" /> 
+                    <a  title="Ir a la página de inicio del INAI" target="_blank" href="//iaipoaxaca.org.mx/site/">
+                        <img src="/contratacionesabiertas/static/images/iaipoax.png" height=46px alt="INAI" /> 
                     </a> 
                 </div>   
                 <div class="col-md-4 text-center logoCAtop">			       
