--- a/contratacionesabiertas/dashboard/public/inai-footer/dgm-footer.html
+++ b/contratacionesabiertas/dashboard/public/inai-footer/dgm-footer.html
@@ -1750,7 +1750,7 @@ Example:
             color: #e6e6e6;
         }
         .inailogo:hover{
-            content: url(/contratacionesabiertas/static/images/inaiFHover.png)
+            content: url(/contratacionesabiertas/static/images/iaipoax.png)
         }
         .mexdiglogo:hover{
             content: url(/contratacionesabiertas/static/images/MEXICO_DIGITALF_HOVER.png)
@@ -1779,9 +1779,15 @@ Example:
             <div class="container-fluid new-container">
                 <div class="row">
                     <div class="pru col-md-4 col-lg-4" style="text-align: center; margin-top: 41px;">
-                        <br><br><br><br><br>
+                        <br>
+                        <a href="http://iaipoaxaca.org.mx/site/" target="_blank">
+                            <img src="/images/iaipoax.png" alt="http://iaipoaxaca.org.mx/site/" height="70px" class="inailogo">
+                        </a>
+                        <br><br><br>
+                        <h5 style="color: #999999; font-weight: bold;">en colaboración con el</h5>
+                        <br><br>
                         <a href="http://inicio.inai.org.mx" target="_blank">
-                            <img src="/contratacionesabiertas/static/images/inaiF.png" alt="inai.org.mx" height="77px" class="inailogo">
+                            <img src="/images/inaiF.png" alt="inai.org.mx" height="77px" class="inailogo">
                         </a>
                     </div>
                     <div class="pru col-md-4 col-lg-4" style="text-align: center; margin-top: 41px;">
@@ -1829,7 +1835,7 @@ Example:
                 <div class="col-md-12 col-lg-12" style="text-align: center;">
                     <p style="font-size: smaller; color:#999999; text-align: center;">Esta herramienta fue desarrollada originalmente por la Coordinación de Estrategia Digital Nacional de Presidencia de la República del periodo 2012-2018.
                         <br>
-                        Contrataciones abiertas - Infraestructura | v-2.1.2
+                        Contrataciones abiertas - Infraestructura | v-2.1.5
                         <p>
                 </div>
             </div>
