Actualización logos dashboard v2.1.5

--- a/contratacionesabiertas/dashboard/public/inai-footer/dgm-footer.html
+++ b/contratacionesabiertas/dashboard/public/inai-footer/dgm-footer.html
@@ -1752,6 +1752,12 @@ Example:
         .inailogo:hover{
             content: url(/contratacionesabiertas/static/images/iaipoax.png)
         }
+        .iaipoaxlogo:hover{
+            content: url(/contratacionesabiertas/static/images/iaipoax.png)
+        }
+        .inailogo:hover{
+            content: url(/contratacionesabiertas/static/images/inaiF.png)
+        }
         .mexdiglogo:hover{
             content: url(/contratacionesabiertas/static/images/MEXICO_DIGITALF_HOVER.png)
         }
@@ -1781,13 +1787,13 @@ Example:
                     <div class="pru col-md-4 col-lg-4" style="text-align: center; margin-top: 41px;">
                         <br>
                         <a href="http://iaipoaxaca.org.mx/site/" target="_blank">
-                            <img src="/images/iaipoax.png" alt="http://iaipoaxaca.org.mx/site/" height="70px" class="inailogo">
+                            <img src="/contratacionesabiertas/static/images/iaipoax.png" alt="http://iaipoaxaca.org.mx/site/" height="70px" class="class="iaipoaxlogo"">
                         </a>
                         <br><br><br>
                         <h5 style="color: #999999; font-weight: bold;">en colaboración con el</h5>
                         <br><br>
                         <a href="http://inicio.inai.org.mx" target="_blank">
-                            <img src="/images/inaiF.png" alt="inai.org.mx" height="77px" class="inailogo">
+                            <img src="/contratacionesabiertas/static/images/inaiF.png" alt="inai.org.mx" height="77px" class="inailogo">
                         </a>
                     </div>
                     <div class="pru col-md-4 col-lg-4" style="text-align: center; margin-top: 41px;">
