--- a/contratacionesabiertas/dashboard/public/inai-navbar/dgm-navbar_datos.html
+++ b/contratacionesabiertas/dashboard/public/inai-navbar/dgm-navbar_datos.html
@@ -137,7 +137,7 @@ and (max-device-width: 736px) {
             <div class="row topBarTop topBarTopS">
                 <div class="col-md-4 navbar-header logoINAItop">
                     <a  title="Ir a la página de inicio del INAI" target="_blank" href="//iaipoaxaca.org.mx/site/">
-                        <img src="/contratacionesabiertas/static/images/iaipoax.png" height=46px alt="INAI" /> 
+                        <img src="/contratacionesabiertas/static/images/iaipoax.png" height=66px alt="IAIPOaxaca" /> 
                     </a> 
                 </div>   
                 <div class="col-md-4 text-center logoCAtop">			       
