--- a/contratacionesabiertas/captura/public/inai-footer/dgm-footer.html
+++ b/contratacionesabiertas/captura/public/inai-footer/dgm-footer.html
@@ -1749,8 +1749,11 @@ Example:
         .sitioInt:hover{
             color: #e6e6e6;
         }
-        .inailogo:hover{
+        .iaipoaxlogo:hover{
             content: url(/images/iaipoax.png)
+        }
+        .inailogo:hover{
+            content: url(/images/inaiF.png)
         }
         .mexdiglogo:hover{
             content: url(/images/MEXICO_DIGITALF_HOVER.png)
@@ -1781,7 +1784,7 @@ Example:
                     <div class="pru col-md-4 col-lg-4" style="text-align: center; margin-top: 41px;">
                         <br>
                         <a href="http://iaipoaxaca.org.mx/site/" target="_blank">
-                            <img src="/images/iaipoax.png" alt="http://iaipoaxaca.org.mx/site/" height="70px" class="inailogo">
+                            <img src="/images/iaipoax.png" alt="http://iaipoaxaca.org.mx/site/" height="70px" class="iaipoaxlogo">
                         </a>
                         <br><br><br>
                         <h5 style="color: #999999; font-weight: bold;">en colaboración con el</h5>
