--- a/contratacionesabiertas/dashboard/public/inai-navbar/dgm-navbar.html
+++ b/contratacionesabiertas/dashboard/public/inai-navbar/dgm-navbar.html
@@ -136,7 +136,7 @@ and (max-device-width: 736px) {
 		<div class="container-fluid topBar">
             <div class="row topBarTop topBarTopS">
                 <div class="col-xs-4 navbar-header logoINAItop">
-                    <a  title="Ir a la página de inicio del IAIP" target="_blank" href="//iaipoaxaca.org.mx/site/">
+                    <a  title="Ir a la página de inicio del IAIPOaxaca" target="_blank" href="//iaipoaxaca.org.mx/site/">
                         <img src="/contratacionesabiertas/static/images/iaipoax.png" height=66px alt="IAIPOaxaca" /> 
                     </a> 
                 </div>   
